# AT-Wallet

./: .env  .gitignore  Cargo.toml  README.md  audit.py  audit_vault.py  test.py  wallet.db
.github/workflows/: ci.yml
Dev-Notes/: dev-note.txt  how-to-run.txt  plans.txt
migrations/: 001_init.sql
src/: README.md  lib.rs  main.rs  models.rs
src/api/: envelope.rs  handlers.rs  middleware.rs  mod.rs
src/backend/: README.md  admin.py  alembic.ini  api.py  auth.py  config.py  db.py  fraud_gate.py  keyring.py  main.py  models.py  requirements_src.txt  solana_client.py  tasks.py  worker.py
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 0001_initial.py
src/demo/: demo_transfer.py
src/frontend/: admin.html  admin.js  index.html  script.js
src/scripts/: check_logins.py  inspect_db.py  reset_db.py
src/security/: auth.rs  email.rs  encryption.rs  hashing.rs  identity.rs  mod.rs  totp.rs
src/tests/: test_keyring.py
src/wallet/: engine.rs
static/: app.js  index.html  script.js  style.css
