[package]
name = "iota-secure-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
iota-sdk = { version = "1.1", features = ["client", "tls"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
hmac = "0.12.1" # Added for PBKDF2
rand = "0.8.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0.1"
dotenvy = "0.15"
hex = "0.4.3"
totp-rs = { version = "5.7", features = ["qr"] }
base32 = "0.4"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }