[package]
name = "iota-secure-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server & Static Files
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] } # Added 'fs'

# Blockchain (Minimalist for WSL)
iota-sdk = { version = "1.1", default-features = false, features = ["client", "tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Security
aes-gcm = "0.10.3"
argon2 = "0.5.3"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8.5"
totp-rs = { version = "5.7", features = ["qr"] }
base32 = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"